--- a/src/documents/index.html
+++ b/src/documents/index.html
@@ -1,6 +1,6 @@
 --- yaml
 layout: 'default'
-title: 'Home'
+title: 'Renuo GmbH'
 ---
 
 <!-- Main hero unit for a primary marketing message or call to action -->
