--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -17,7 +17,8 @@ position: 5
 <div class="row-fluid">
     <div class="span7">
         <p>Derzeit sind wir auf der Suche nach folgenden Stellen:</p><br/>
-        <h3><a href="/jobs/141120-sea/">Betreuung Suchmaschinenmarketing (SEA) 20-40%</a></h3>
+        <h3><a href="/jobs/141120-sea/">Betreuung Suchmaschinenmarketing (SEA) 20-40%</a></h3> (ab sofort)
+        <h3><a href="/jobs/141223-ims-praktikum/">IMS-Praktikant 2015-2016</a></h3> (ab Aug. 2015)
 		<br/>
 
 		<p>Wir freuen uns jederzeit auch auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>
