job update, missing alt tags

--- a/src/documents/jobs/141223-ims-praktikum/index.html
+++ b/src/documents/jobs/141223-ims-praktikum/index.html
@@ -9,7 +9,7 @@ position:
     <div class="span12">
         <div class="page-header">
             <h1>IMS-Praktikant
-                <small>ab 2. August 2015</small>
+                <small>ab 3. August 2015</small>
             </h1>
         </div>
     </div>
@@ -17,7 +17,7 @@ position:
 	<div class="row-fluid">
     <div class="span12">
 	<h3>Wir bieten eine IMS-Praktikumsstelle 2015/2016</h3>
-        <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches sich auf die individuelle Entwicklung von qualitativ hochwertigen Applikationen fokussiert. Mit modernen WebTechnologien (Schwerpunkte Ruby on Rails, HTML5, Javascript) entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung unseres Teams suchen wir ab August 2015 für die Dauer eines Jahres eine/n IMS-Praktikantin/en.</p>
+        <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ hochwertigen Applikationen fokussiert. Mit modernen WebTechnologien (Schwerpunkte Ruby on Rails, HTML5, Javascript) entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung unseres Teams suchen wir ab August 2015 für die Dauer eines Jahres eine/n IMS-Praktikantin/en.</p>
 		<br/>
 		<h4>Deine Aufgaben</h4>
 		<ul class="icons-ul">
@@ -31,7 +31,7 @@ position:
 		<ul class="icons-ul">
           <li><i class="icon-li icon-ok"></i> Du <3 Open Source</li>
           <li><i class="icon-li icon-ok"></i> (Sehr) Gute Noten</li>		  
-          <li><i class="icon-li icon-ok"></i> Du programmierst manchmal auch in deiner Freizeit</li>
+          <li><i class="icon-li icon-ok"></i> Du programmierst manchmal auch in Deiner Freizeit</li>
           <li><i class="icon-li icon-ok"></i> Du lernst gerne neue Dinge</li>
 		  <li><i class="icon-li icon-ok"></i> Du willst mit Linux oder Mac arbeiten</li>
           <li><i class="icon-li icon-ok"></i> Du kannst sehr selbständig arbeiten</li>
@@ -47,9 +47,9 @@ position:
 		  <li><i class="icon-li icon-ok"></i> Flexible Arbeitszeiten</li>
           <li><i class="icon-li icon-ok"></i> Ein technisch sehr kompetentes, motiviertes, kollegiales und junges Team</li>
 		  <li><i class="icon-li icon-ok"></i> Flexible Arbeitszeiten</li>
-		  <li><i class="icon-li icon-ok"></i> "Praktikum zu Zweit": Wir bilden jeweils zwei Praktikanten gleichzeitig aus</li>		  
-		  <li><i class="icon-li icon-ok"></i> Betreuung während Deiner IPA</li>		  
-		  <li><i class="icon-li icon-ok"></i> Wir sind IMS Abgänger und wissen genau, was auf Dich zukommt!</li>		  
+		  <li><i class="icon-li icon-ok"></i> "Praktikum zu zweit": Wir bilden jeweils zwei Praktikanten gleichzeitig aus</li>		  
+		  <li><i class="icon-li icon-ok"></i> Betreuung Deiner IPA</li>		  
+		  <li><i class="icon-li icon-ok"></i> Wir sind IMS-Abgänger und wissen genau, was auf Dich zukommt!</li>		  
 		</ul>
     </div>
 </div>
