typo, responsive design

--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -15,23 +15,22 @@ position: 5
 </div>
 
 <div class="row-fluid">
-    <div class="span7">
-        <p>Derzeit sind wir auf der Suche nach folgenden Stellen:</p><br/>
-        <h3><a href="/jobs/141120-sea/">Betreuung Suchmaschinenmarketing (SEA) 20-40%</a> <small>(ab sofort)</small></h3>
-        <h3><a href="/jobs/141223-ims-praktikum/">IMS-Praktikant 2015-2016 100%<a> <small>(ab Aug. 2015)</small></h3>
-		<br/>
-
-		<p>Wir freuen uns jederzeit auch auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>
+    <div class="span8">
+        <p>Derzeit sind wir auf der Suche nach folgenden Stellen:</p>
+        <p>
+            <h3><a href="/jobs/141120-sea/">Betreuung Suchmaschinenmarketing (SEA) 20-40%</a> <small>(ab sofort)</small></h3>
+            <h3><a href="/jobs/141223-ims-praktikum/">IMS-Praktikant 2015-2016 100%</a> <small>(ab Aug. 2015)</small></h3>
+        </p>
+        <p>Wir freuen uns jederzeit auch auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>
     </div>
 
-	<div class="span1">
-    </div>
-
-	<div class="span3">
-	<br/>
-	<blockquote>Nie ist das menschliche Gemüt heiterer gestimmt, als wenn es seine richtige Arbeit gefunden hat.
-    <small>Wilhelm von Humboldt</small>
-    </blockquote>
+    <div class="span4">
+        <p>
+	        <blockquote>
+                Nie ist das menschliche Gemüt heiterer gestimmt, als wenn es seine richtige Arbeit gefunden hat.
+                <small>Wilhelm von Humboldt</small>
+            </blockquote>
+        </p>
     </div>
 </div>
 <br/>
@@ -53,18 +52,14 @@ position: 5
 <div class="row-fluid">
 <div class="span12">
 		<h3>Arbeiten bei der Renuo:</h3>
-        			<ul class="icons-ul">
+            <ul class="icons-ul">
 			<li><i class="icon-li icon-ok"></i> heisst 100% Identifikation mit dem Unternehmen und den Kunden,</li>
 			<li><i class="icon-li icon-ok"></i> heisst 100% Wille zu bemerkenswerter Leistung,</li>
-			<li><i class="icon-li icon-ok"></i> bedeutet neugierig zu sein, permanent nach kreativen, überraschenden und überzeugenden Lösungen zu suchen,</li>
-			<li><i class="icon-li icon-ok"></i> erfordert ein hohes Mass an Selbständigkeit und Verantwortungsbewusstsein,</li>
+            <li><i class="icon-li icon-ok"></i> bedeutet neugierig zu sein, permanent nach kreativen, überraschenden und überzeugenden Lösungen zu suchen,</li>
+            <li><i class="icon-li icon-ok"></i> erfordert ein hohes Mass an Selbständigkeit und Verantwortungsbewusstsein,</li>
 			<li><i class="icon-li icon-ok"></i> heisst offener und ehrlicher Austausch, Kritik und Anerkennung,</li>
 			<li><i class="icon-li icon-ok"></i> bringt persönlich und fachlich weiter,</li>
 			<li><i class="icon-li icon-ok"></i> kann nicht jeder, die Erwartungen sind hoch.</li>
 		</ul>
 	</div>
 </div>
-
-
-
-
