--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -16,12 +16,9 @@ position: 5
 
 <div class="row-fluid">
     <div class="span8">
-        <p>Derzeit sind wir auf der Suche nach folgenden Stellen:</p>
-        <p>
-            <h3><a href="/jobs/141120-sea/">Betreuung Suchmaschinenmarketing (SEA) 20-40%</a> <small>(ab sofort)</small></h3>
-            <h3><a href="/jobs/141223-ims-praktikum/">IMS-Praktikant 2015-2016 100%</a> <small>(ab Aug. 2015)</small></h3>
-        </p>
-        <p>Wir freuen uns jederzeit auch auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>
+        <p>Derzeit haben wir keine offenen Stellen.</p>
+
+        <p>Wir freuen uns aber jederzeit auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>
     </div>
 
     <div class="span4">
