--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -43,17 +43,19 @@ position: 5
 			<li><i class="icon-li icon-ok"></i> Selbständige Arbeitsweise</li>
 			<li><i class="icon-li icon-ok"></i> Flexible Arbeitszeiten</li>
 			<li><i class="icon-li icon-ok"></i> Ein technisch sehr kompetentes, motiviertes, kollegiales und junges Team</li>
+			<li><i class="icon-li icon-ok"></i> Hohe Qualitätsstandards, automatisierte Tests</li>
+			<li><i class="icon-li icon-ok"></i> Moderne Büroeinrichtung und Geräte, Rücksicht auf Gesundheit</li>
 		</ul>
 	</div>
 </div>
 <div class="row-fluid">
-<div class="span12">
+	<div class="span12">
 		<h3>Arbeiten bei der Renuo:</h3>
-            <ul class="icons-ul">
+		<ul class="icons-ul">
 			<li><i class="icon-li icon-ok"></i> heisst 100% Identifikation mit dem Unternehmen und den Kunden,</li>
 			<li><i class="icon-li icon-ok"></i> heisst 100% Wille zu bemerkenswerter Leistung,</li>
-            <li><i class="icon-li icon-ok"></i> bedeutet neugierig zu sein, permanent nach kreativen, überraschenden und überzeugenden Lösungen zu suchen,</li>
-            <li><i class="icon-li icon-ok"></i> erfordert ein hohes Mass an Selbständigkeit und Verantwortungsbewusstsein,</li>
+			<li><i class="icon-li icon-ok"></i> bedeutet neugierig zu sein, permanent nach kreativen, überraschenden und überzeugenden Lösungen zu suchen,</li>
+			<li><i class="icon-li icon-ok"></i> erfordert ein hohes Mass an Selbständigkeit und Verantwortungsbewusstsein,</li>
 			<li><i class="icon-li icon-ok"></i> heisst offener und ehrlicher Austausch, Kritik und Anerkennung,</li>
 			<li><i class="icon-li icon-ok"></i> bringt persönlich und fachlich weiter,</li>
 			<li><i class="icon-li icon-ok"></i> kann nicht jeder, die Erwartungen sind hoch.</li>
