--- a/src/documents/web-entwicklung/rubyonrails.html
+++ b/src/documents/web-entwicklung/rubyonrails.html
@@ -59,7 +59,7 @@ position: 1
             <a href="http://www.xing.com" target="_blank">Xing</a>, usw.)
             und überzeugt immer wieder mit Innovation.
             Weitere Informationen zu Ruby on Rails finden Sie unter:
-            <a href="http://rubyonrails.org/applications" target="_blank">http://rubyonrails.org</a></p>
+            <a href="http://rubyonrails.org/" target="_blank">http://rubyonrails.org</a></p>
 
         <br/><img src="/images/technologien/rubyonrails.png" width="20%" alt="Ruby on Rails Logo">
     </div>
