--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -16,10 +16,11 @@ position: 5
 
 <div class="row-fluid">
     <div class="span8">
-        <p>Derzeit haben wir keine offenen Stellen.</p>
-
-        <p>Wir freuen uns aber jederzeit auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>
-    </div>
+        <p>Derzeit sind wir auf der Suche nach folgenden Stellen:</p>
+         <p>
+             <h3><a href="/jobs/150426-ruby-on-rails-entwickler-job/">Ruby on Rails Entwickler 80-100%</a> <small>(ab 1. Juni 2015)</small></h3>
+         </p>
+         <p>Wir freuen uns jederzeit auch auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>    </div>
 
     <div class="span4">
         <p>
