--- a/src/documents/jobs/150426-ruby-on-rails-entwickler-job/index.html
+++ b/src/documents/jobs/150426-ruby-on-rails-entwickler-job/index.html
@@ -54,7 +54,7 @@ position:
 <div class="row-fluid">
 	<div class="span12">
 	<h3>Next step</h3>
-	<p> Schreib uns bis zum 15. Mai eine E-Mail an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a> und sende bitte Deinen CV und/oder Portfolio mit.</p><p>Sehr gerne würden wir bereits auch in Dein Github-Konto schauen.</p>
+	<p> Schreib uns eine E-Mail an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a> und sende bitte Deinen CV und/oder Portfolio mit.</p><p>Sehr gerne würden wir bereits auch in Dein Github-Konto schauen.</p>
 	</div>
 
 </div>
