--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -9,18 +9,18 @@ position: 5
 <div class="row-fluid">
     <div class="span12">
         <div class="page-header">
-            <h1>Offene Stellen</h1>
+            <h1>Open job positions</h1>
         </div>
     </div>
 </div>
 
 <div class="row-fluid">
     <div class="span8">
-        <p>Derzeit sind wir auf der Suche nach folgenden Stellen:</p>
+        <p>At the moment we look for the following positions:</p>
          <p>
-             <h3><a href="/jobs/150426-ruby-on-rails-entwickler-job/">Ruby on Rails Entwickler 80-100%</a> <small>(ab 1. Juni 2015)</small></h3>
+             <h3><a href="/jobs/150426-ruby-on-rails-entwickler-job/">Open Source Web Engineer 80-100%</a> <small>(from July 2015)</small></h3>
          </p>
-         <p>Wir freuen uns jederzeit auch auf Initiativbewerbungen an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>    </div>
+         <p>We also look forward to unsolicited applications to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>    </div>
 
     <div class="span4">
         <p>
@@ -33,33 +33,96 @@ position: 5
 </div>
 <br/>
 <div class="row-fluid">
-	<div class="span12">
-		<h3>Warum bei der Renuo arbeiten?</h3>
-        	<p>
-			Vielleicht hast Du schon immer geträumt, mit uns zu arbeiten. Falls nicht: Es gibt auch noch andere Gründe, dies mit uns zu tun:
-		</p>
-		<ul class="icons-ul">
-			<li><i class="icon-li icon-ok"></i> Spannende und vielseitige Tätigkeit</li>
-			<li><i class="icon-li icon-ok"></i> Neue Technologien</li>
-			<li><i class="icon-li icon-ok"></i> Selbständige Arbeitsweise</li>
-			<li><i class="icon-li icon-ok"></i> Flexible Arbeitszeiten</li>
-			<li><i class="icon-li icon-ok"></i> Ein technisch sehr kompetentes, motiviertes, kollegiales und junges Team</li>
-			<li><i class="icon-li icon-ok"></i> Hohe Qualitätsstandards, automatisierte Tests</li>
-			<li><i class="icon-li icon-ok"></i> Moderne Büroeinrichtung und Geräte, Rücksicht auf Gesundheit</li>
-		</ul>
-	</div>
+    <div class="span12">
+        <div class="page-header">
+            <h1>Who we are, really</h1>
+        </div>
+    </div>
 </div>
 <div class="row-fluid">
-	<div class="span12">
-		<h3>Arbeiten bei der Renuo:</h3>
+	<div class="span4">
+		<h3>Work with (technical)</h3>
 		<ul class="icons-ul">
-			<li><i class="icon-li icon-ok"></i> heisst 100% Identifikation mit dem Unternehmen und den Kunden,</li>
-			<li><i class="icon-li icon-ok"></i> heisst 100% Wille zu bemerkenswerter Leistung,</li>
-			<li><i class="icon-li icon-ok"></i> bedeutet neugierig zu sein, permanent nach kreativen, überraschenden und überzeugenden Lösungen zu suchen,</li>
-			<li><i class="icon-li icon-ok"></i> erfordert ein hohes Mass an Selbständigkeit und Verantwortungsbewusstsein,</li>
-			<li><i class="icon-li icon-ok"></i> heisst offener und ehrlicher Austausch, Kritik und Anerkennung,</li>
-			<li><i class="icon-li icon-ok"></i> bringt persönlich und fachlich weiter,</li>
-			<li><i class="icon-li icon-ok"></i> kann nicht jeder, die Erwartungen sind hoch.</li>
+			<li><i class="icon-li icon-ok"></i> newest technologies</li>
+			<li><i class="icon-li icon-ok"></i> the tools <b>you</b> want</li>
+			<li><i class="icon-li icon-ok"></i> open source software</li>
+			<li><i class="icon-li icon-ok"></i> clean and high <b>quality</b> code</li>
+			<li><i class="icon-li icon-ok"></i> new and <b>exciting</b> projects</li>
+			<li><i class="icon-li icon-ok"></i> your own responsabilites</li>
+		</ul>
+    <h3>Work with (social)</h3>
+    <ul class="icons-ul">
+      <li><i class="icon-li icon-ok"></i> young people with a lot of <b>experience</b></li>
+      <li><i class="icon-li icon-ok"></i> <b>free</b> minds adn out of the box thinkers</li>
+      <li><i class="icon-li icon-ok"></i> experts that want to <b>learn</b> and <b>teach</b></li>
+      <li><i class="icon-li icon-ok"></i> a team of <b>like-minded people</b></li>
+    </ul>
+	</div>
+
+	<div class="span4">
+		<h3>Work with (material)</h3>
+		<ul class="icons-ul">
+			<li><i class="icon-li icon-ok"></i> the stuff and tools <b>you</b> want</li>
+        <ul>
+          <li>standing desks</li>
+          <li>big screens</li>
+          <li>MacBooks</li>
+          <li>whiteboards, flipchart</li>
+        </ul>
+			<li><i class="icon-li icon-ok"></i> in a cool office</li>
+        <ul>
+          <li>modern, fresh and friendly environment</li>
+          <li>perfect loacation (2min to Wallisellen station)</li>
+          <li>mensa and Glatt nearby</li>
+          <li>quiet, separated but still open work spaces</li>
+          <li>free coffee and other goodies</li>
+        </ul>
+		</ul>
+    <div><%- @image_tag 'renuo-desk.jpg' %></div>
+    <div><%- @image_tag 'renuo-office.jpg' %></div>    
+	</div>
+
+  <div class="span4">
+    <h3>Work with (organisational):</h3>
+    <ul class="icons-ul">
+      <li><i class="icon-li icon-ok"></i> <b>agile</b> project management</li>
+      <li><i class="icon-li icon-ok"></i> in a real SCRUM team</li>
+      <ul>
+        <li>mostly self organised</li>
+        <li>daily scrums and weekly plannings</li>
+      </ul>
+      <li><i class="icon-li icon-ok"></i> a <b>flexible</b> schedule and pensum</li>
+      <li><i class="icon-li icon-ok"></i> withoud unnecessary formalities</li>
+    </ul>
+    <h3>We believe that</h3>
+    <ul class="icons-ul">
+      <li><i class="icon-li icon-ok"></i> you only get happy customers by being <b>happy developers</b></li>
+      <li><i class="icon-li icon-ok"></i> a <b>thrieving</b> environment helps everyone to thrive themselves</li>
+      <li><i class="icon-li icon-ok"></i> everyone should be <b>involved</b> in bringing our company forward</li>
+      <li><i class="icon-li icon-ok"></i> working should be <b>fun</b></li>
+    </ul>
+  </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span12">
+        <div class="page-header">
+            <h1>What do we love?</h1>
+        </div>
+    </div>
+</div>
+
+<div class="row-fluid">
+	<div class="span12">
+		<h3>We love</h3>
+		<ul class="icons-ul">
+			<li><i class="icon-li icon-ok"></i> open source</li>
+			<li><i class="icon-li icon-ok"></i> good software engineering</li>
+			<li><i class="icon-li icon-ok"></i> excellent quality code</li>
+			<li><i class="icon-li icon-ok"></i> new stuff</li>
+			<li><i class="icon-li icon-ok"></i> discussing ideas</li>
+			<li><i class="icon-li icon-ok"></i> working as a team</li>
+      <li><i class="icon-li icon-ok"></i> to learn</li>
 		</ul>
 	</div>
 </div>
