update jobs page

--- a/src/documents/jobs/150426-ruby-on-rails-entwickler-job/index.html
+++ b/src/documents/jobs/150426-ruby-on-rails-entwickler-job/index.html
@@ -8,8 +8,8 @@ position:
 <div class="row-fluid page-section">
     <div class="span12">
         <div class="page-header">
-            <h1>Software-Engineer Ruby on Rails
-                <small>80 - 100%, ab 1. Juni 2015</small>
+            <h1>Open Source Web Software-Engineer
+                <small>80 - 100%, ab 1. Juli 2015</small>
             </h1>
         </div>
     </div>
