--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -50,12 +50,25 @@ position: 5
 			<li><i class="icon-li icon-ok"></i> new and <b>exciting</b> projects</li>
 			<li><i class="icon-li icon-ok"></i> your own responsabilites</li>
 		</ul>
+  </br>
     <h3>Work with (social)</h3>
     <ul class="icons-ul">
       <li><i class="icon-li icon-ok"></i> young people with a lot of <b>experience</b></li>
       <li><i class="icon-li icon-ok"></i> <b>free</b> minds adn out of the box thinkers</li>
       <li><i class="icon-li icon-ok"></i> experts that want to <b>learn</b> and <b>teach</b></li>
       <li><i class="icon-li icon-ok"></i> a team of <b>like-minded people</b></li>
+    </ul>
+  </br>
+    <h3>Work with (organisational):</h3>
+    <ul class="icons-ul">
+      <li><i class="icon-li icon-ok"></i> <b>agile</b> project management</li>
+      <li><i class="icon-li icon-ok"></i> in a real SCRUM team</li>
+      <ul>
+        <li>mostly self organised</li>
+        <li>daily scrums and weekly plannings</li>
+      </ul>
+      <li><i class="icon-li icon-ok"></i> a <b>flexible</b> schedule and pensum</li>
+      <li><i class="icon-li icon-ok"></i> withoud unnecessary formalities</li>
     </ul>
 	</div>
 
@@ -78,29 +91,11 @@ position: 5
           <li>free coffee and other goodies</li>
         </ul>
 		</ul>
-    <div><%- @image_tag 'renuo-desk.jpg' %></div>
-    <div><%- @image_tag 'renuo-office.jpg' %></div>    
 	</div>
 
   <div class="span4">
-    <h3>Work with (organisational):</h3>
-    <ul class="icons-ul">
-      <li><i class="icon-li icon-ok"></i> <b>agile</b> project management</li>
-      <li><i class="icon-li icon-ok"></i> in a real SCRUM team</li>
-      <ul>
-        <li>mostly self organised</li>
-        <li>daily scrums and weekly plannings</li>
-      </ul>
-      <li><i class="icon-li icon-ok"></i> a <b>flexible</b> schedule and pensum</li>
-      <li><i class="icon-li icon-ok"></i> withoud unnecessary formalities</li>
-    </ul>
-    <h3>We believe that</h3>
-    <ul class="icons-ul">
-      <li><i class="icon-li icon-ok"></i> you only get happy customers by being <b>happy developers</b></li>
-      <li><i class="icon-li icon-ok"></i> a <b>thrieving</b> environment helps everyone to thrive themselves</li>
-      <li><i class="icon-li icon-ok"></i> everyone should be <b>involved</b> in bringing our company forward</li>
-      <li><i class="icon-li icon-ok"></i> working should be <b>fun</b></li>
-    </ul>
+    <img style="max-height: 250px;" src="renuo-desk.jpg" alt="Desks at Renuo"/>
+    <img style="max-height: 250px;" src="renuo-office.jpg" alt="Office at Renuo"/>
   </div>
 </div>
 
@@ -113,7 +108,7 @@ position: 5
 </div>
 
 <div class="row-fluid">
-	<div class="span12">
+	<div class="span6">
 		<h3>We love</h3>
 		<ul class="icons-ul">
 			<li><i class="icon-li icon-ok"></i> open source</li>
@@ -125,4 +120,13 @@ position: 5
       <li><i class="icon-li icon-ok"></i> to learn</li>
 		</ul>
 	</div>
+  <div class="span6">
+  <h3>We believe that</h3>
+  <ul class="icons-ul">
+    <li><i class="icon-li icon-ok"></i> you only get happy customers by being <b>happy developers</b></li>
+    <li><i class="icon-li icon-ok"></i> a <b>thrieving</b> environment helps everyone to thrive themselves</li>
+    <li><i class="icon-li icon-ok"></i> everyone should be <b>involved</b> in bringing our company forward</li>
+    <li><i class="icon-li icon-ok"></i> working should be <b>fun</b></li>
+  </ul>
+  </div>
 </div>
