update jobs page

--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -50,7 +50,6 @@ position: 5
 			<li><i class="icon-li icon-ok"></i> new and <b>exciting</b> projects</li>
 			<li><i class="icon-li icon-ok"></i> your own responsabilites</li>
 		</ul>
-  </br>
     <h3>Work with (social)</h3>
     <ul class="icons-ul">
       <li><i class="icon-li icon-ok"></i> young people with a lot of <b>experience</b></li>
@@ -58,7 +57,6 @@ position: 5
       <li><i class="icon-li icon-ok"></i> experts that want to <b>learn</b> and <b>teach</b></li>
       <li><i class="icon-li icon-ok"></i> a team of <b>like-minded people</b></li>
     </ul>
-  </br>
     <h3>Work with (organisational):</h3>
     <ul class="icons-ul">
       <li><i class="icon-li icon-ok"></i> <b>agile</b> project management</li>
@@ -94,11 +92,11 @@ position: 5
 	</div>
 
   <div class="span4">
-    <img style="max-height: 250px;" src="renuo-desk.jpg" alt="Desks at Renuo"/>
-    <img style="max-height: 250px;" src="renuo-office.jpg" alt="Office at Renuo"/>
+    <img style="max-height: 250px;" src="/images/renuo-desk.jpg" alt="Desks at Renuo"/>
+    <img style="max-height: 250px;" src="/images/renuo-office.jpg" alt="Office at Renuo"/>
   </div>
 </div>
-
+</br>
 <div class="row-fluid">
     <div class="span12">
         <div class="page-header">
