--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -50,55 +50,62 @@ position: 5
 			<li><i class="icon-li icon-ok"></i> new and <b>exciting</b> projects</li>
 			<li><i class="icon-li icon-ok"></i> your own responsabilites</li>
 		</ul>
-    <h3>Work with (social)</h3>
-    <ul class="icons-ul">
-      <li><i class="icon-li icon-ok"></i> young people with a lot of <b>experience</b></li>
-      <li><i class="icon-li icon-ok"></i> <b>free</b> minds adn out of the box thinkers</li>
-      <li><i class="icon-li icon-ok"></i> experts that want to <b>learn</b> and <b>teach</b></li>
-      <li><i class="icon-li icon-ok"></i> a team of <b>like-minded people</b></li>
-    </ul>
-    <h3>Work with (organisational):</h3>
-    <ul class="icons-ul">
-      <li><i class="icon-li icon-ok"></i> <b>agile</b> project management</li>
-      <li><i class="icon-li icon-ok"></i> in a real SCRUM team</li>
-      <ul>
-        <li>mostly self organised</li>
-        <li>daily scrums and weekly plannings</li>
-      </ul>
-      <li><i class="icon-li icon-ok"></i> a <b>flexible</b> schedule and pensum</li>
-      <li><i class="icon-li icon-ok"></i> withoud unnecessary formalities</li>
-    </ul>
 	</div>
-
-	<div class="span4">
-		<h3>Work with (material)</h3>
-		<ul class="icons-ul">
-			<li><i class="icon-li icon-ok"></i> the stuff and tools <b>you</b> want</li>
-        <ul>
-          <li>standing desks</li>
-          <li>big screens</li>
-          <li>MacBooks</li>
-          <li>whiteboards, flipchart</li>
-        </ul>
-			<li><i class="icon-li icon-ok"></i> in a cool office</li>
-        <ul>
-          <li>modern, fresh and friendly environment</li>
-          <li>perfect loacation (2min to Wallisellen station)</li>
-          <li>mensa and Glatt nearby</li>
-          <li>quiet, separated but still open work spaces</li>
-          <li>free coffee and other goodies</li>
-        </ul>
-		</ul>
-	</div>
-
   <div class="span4">
-    <img style="max-height: 250px;" src="/images/renuo-desk.jpg" alt="Desks at Renuo"/>
-    <img style="max-height: 250px;" src="/images/renuo-office.jpg" alt="Office at Renuo"/>
+  <h3>Work with (social)</h3>
+  <ul class="icons-ul">
+    <li><i class="icon-li icon-ok"></i> young people with a lot of <b>experience</b></li>
+    <li><i class="icon-li icon-ok"></i> <b>free</b> minds adn out of the box thinkers</li>
+    <li><i class="icon-li icon-ok"></i> experts that want to <b>learn</b> and <b>teach</b></li>
+    <li><i class="icon-li icon-ok"></i> a team of <b>like-minded people</b></li>
+  </ul>
+  </div>
+  <div class="span4">
+  <h3>Work with (organisational):</h3>
+  <ul class="icons-ul">
+    <li><i class="icon-li icon-ok"></i> <b>agile</b> project management</li>
+    <li><i class="icon-li icon-ok"></i> in a real SCRUM team</li>
+    <ul>
+      <li>mostly self organised</li>
+      <li>daily scrums and weekly plannings</li>
+    </ul>
+    <li><i class="icon-li icon-ok"></i> a <b>flexible</b> schedule and pensum</li>
+    <li><i class="icon-li icon-ok"></i> withoud unnecessary formalities</li>
+  </ul>
   </div>
 </div>
 </br>
+
 <div class="row-fluid">
-    <div class="span12">
+<div class="span4">
+  <h3>Work with (material)</h3>
+  <ul class="icons-ul">
+    <li><i class="icon-li icon-ok"></i> the stuff and tools <b>you</b> want</li>
+      <ul>
+        <li>standing desks</li>
+        <li>big screens</li>
+        <li>MacBooks</li>
+        <li>whiteboards, flipchart</li>
+      </ul>
+    <li><i class="icon-li icon-ok"></i> in a cool office</li>
+      <ul>
+        <li>modern, fresh and friendly environment</li>
+        <li>perfect loacation (2min to Wallisellen station)</li>
+        <li>mensa and Glatt nearby</li>
+        <li>quiet, separated but still open work spaces</li>
+        <li>free coffee and other goodies</li>
+      </ul>
+  </ul>
+</div>
+
+<div class="span8">
+  <img src="/images/renuo-desk.jpg" alt="Desks at Renuo"/>
+</div>
+</div>
+</br>
+
+<div class="row-fluid">
+    <div class="span8">
         <div class="page-header">
             <h1>What do we love?</h1>
         </div>
@@ -106,7 +113,7 @@ position: 5
 </div>
 
 <div class="row-fluid">
-	<div class="span6">
+	<div class="span4">
 		<h3>We love</h3>
 		<ul class="icons-ul">
 			<li><i class="icon-li icon-ok"></i> open source</li>
@@ -118,7 +125,7 @@ position: 5
       <li><i class="icon-li icon-ok"></i> to learn</li>
 		</ul>
 	</div>
-  <div class="span6">
+  <div class="span4">
   <h3>We believe that</h3>
   <ul class="icons-ul">
     <li><i class="icon-li icon-ok"></i> you only get happy customers by being <b>happy developers</b></li>
@@ -127,4 +134,7 @@ position: 5
     <li><i class="icon-li icon-ok"></i> working should be <b>fun</b></li>
   </ul>
   </div>
+  <div class="span4">
+  <img style="max-height: 250px;" src="/images/renuo-office.jpg" alt="Office at Renuo"/>
+ </div>
 </div>
