--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -32,10 +32,12 @@ position: 5
     </div>
 </div>
 <br/>
+<br/>
+<br/>
 <div class="row-fluid">
     <div class="span12">
         <div class="page-header">
-            <h1>Who we are, really</h1>
+            <h1>Who we are</h1>
         </div>
     </div>
 </div>
@@ -75,6 +77,15 @@ position: 5
   </div>
 </div>
 </br>
+
+<br/>
+<div class="row-fluid">
+    <div class="span12">
+        <div class="page-header">
+            <h1>How we work</h1>
+        </div>
+    </div>
+</div>
 
 <div class="row-fluid">
 <div class="span4">
