rails heck update

--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -57,7 +57,7 @@ position: 5
   <h3>Work with (social)</h3>
   <ul class="icons-ul">
     <li><i class="icon-li icon-ok"></i> young people with a lot of <b>experience</b></li>
-    <li><i class="icon-li icon-ok"></i> <b>free</b> minds adn out of the box thinkers</li>
+    <li><i class="icon-li icon-ok"></i> <b>free</b> minds and out of the box thinkers</li>
     <li><i class="icon-li icon-ok"></i> experts that want to <b>learn</b> and <b>teach</b></li>
     <li><i class="icon-li icon-ok"></i> a team of <b>like-minded people</b></li>
   </ul>
