upload new job position

--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -20,6 +20,9 @@ position: 5
          <p>
              <h3><a href="/jobs/150426-ruby-on-rails-entwickler-job/">Open Source Web Engineer 80-100%</a> <small>(from July 2015)</small></h3>
          </p>
+         <p>
+             <h3><a href="/jobs/150625-sea-seo/">Consultant Suchmaschinenmarketing / Suchmaschinenwerbung (SEO, SEA) 20%</a> <small>(ab August 2015)</small></h3>
+         </p>
          <p>We also look forward to unsolicited applications to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>    </div>
 
     <div class="span4">
@@ -104,6 +107,7 @@ position: 5
         <li>perfect loacation (2min to Wallisellen station)</li>
         <li>mensa and Glatt nearby</li>
         <li>quiet, separated but still open work spaces</li>
+        <li>shower available if you want to do sports</li>
         <li>free coffee and other goodies</li>
       </ul>
   </ul>
