--- a/src/documents/jobs/150625-sea-seo/index.html
+++ b/src/documents/jobs/150625-sea-seo/index.html
@@ -8,21 +8,21 @@ position:
 <div class="row-fluid page-section">
   <div class="span12">
       <div class="page-header">
-          <h1>Be&shy;treu&shy;ung Such&shy;ma&shy;schi&shy;nen&shy;mar&shy;ke&shy;ting SEA 20-40%
-              <small>ab sofort</small>
+          <h1>Be&shy;treu&shy;ung Such&shy;ma&shy;schi&shy;nen&shy;mar&shy;ke&shy;ting SEA 20%
+              <small>ab 1. August 2015</small>
           </h1>
       </div>
   </div>
 
 	<div class="row-fluid">
     <div class="span12">
-			<h3>Wir suchen ab sofort einen AdWords & SEA Consultant</h3>
-      <p>Die Renuo hat für diverse Kunden SEA-Mandate inne. Mit unterschiedlichen AdWords-Kampagnen (Text, Bild, Remarketing) stellen wir sicher, dass unsere angefertigten Webapplikationen auch zu den entsprechenden Kunden kommen. Seit dem Beginn 2014 sind wir <a href="https://www.google.com/partners/#a_profile;idtf=2492208531" target="_blank">offizieller Google Partner</a>.</p> 
+			<h3>Wir suchen ab sofort einen AdWords, SEA & SEO Consultant</h3>
+      <p>Die Renuo hat für diverse Kunden SEA-Mandate inne. Mit unterschiedlichen AdWords-Kampagnen (Text, Bild, Remarketing, RichMedia) stellen wir sicher, dass unsere angefertigten Webapplikationen auch zu den entsprechenden Kunden kommen. Seit dem Beginn 2014 sind wir <a href="https://www.google.com/partners/#a_profile;idtf=2492208531" target="_blank">offizieller Google Partner</a>.</p>
 			<p>Mit steigender Kundenanzahl ist auch der Betreuungsaufwand gestiegen. Aus diesem Grund suchen wir zur Verstärkung unseres Teams eine verantwortungsvolle und selbständige Persönlichkeit. Nach Einführung durch uns übernimmst Du die volle Betreuung der Kunden und deren Kampagnen.</p>
 			<br/>
 		</div>
 	</div>
-	
+
 	<div class="row-fluid">
 		<div class="span4">
 			<h4>Was können wir Dir bieten?</h4>
@@ -37,11 +37,12 @@ position:
 		<div class="span4">
 			<h4>Was erwarten wir?</h4>
 			<ul class="icons-ul">
-	          <li><i class="icon-li icon-ok"></i> Studium im Bereich Wirtschaft, Marketing oder IT</li>
 	          <li><i class="icon-li icon-ok"></i> Praktische Erfahrungen in Online Marketing (SEO/SEM)</li>
 	          <li><i class="icon-li icon-ok"></i> Wenn möglich eine Google AdWords Zertifizierung (kann nachgeholt werden)</li>
-	          <li><i class="icon-li icon-ok"></i> Strukturierte und kundenorientierte Arbeitsweise</li>
-			  <li><i class="icon-li icon-ok"></i> Sehr selbständige Arbeitsweise</li>
+			      <li><i class="icon-li icon-ok"></i> Sehr selbständige Arbeitsweise</li>
+            <li><i class="icon-li icon-ok"></i> Sehr gute schriftliche Kommunikationsfähigkeiten</li>
+            <li><i class="icon-li icon-ok"></i> Studium im Bereich Wirtschaft, Marketing oder IT (muss nicht abgeschlossen sein)</li>
+
 			</ul>
 		</div>
 		<div class="span4">
@@ -56,7 +57,7 @@ position:
 		</div>
 	</div>
 	<br/>
-	
+
 	<div class="row-fluid">
 		<div class="span12">
 		<h3>Next step</h3>
