--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -21,7 +21,7 @@ position: 5
              <h3><a href="/jobs/150426-ruby-on-rails-entwickler-job/">Open Source Web Engineer 80-100%</a> <small>(from July 2015)</small></h3>
          </p>
          <p>
-             <h3><a href="/jobs/150625-sea-seo/">Consultant Suchmaschinenmarketing / Suchmaschinenwerbung (SEO, SEA) 20%</a> <small>(ab August 2015)</small></h3>
+             <h3><a href="/jobs/150625-sea-seo/">Consultant SEA & SEO 20%</a> <small>(ab August 2015)</small></h3>
          </p>
          <p>We also look forward to unsolicited applications to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>    </div>
 
