--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -75,7 +75,7 @@ position: 5
       <li>daily scrums and weekly plannings</li>
     </ul>
     <li><i class="icon-li icon-ok"></i> a <b>flexible</b> schedule and pensum</li>
-    <li><i class="icon-li icon-ok"></i> withoud unnecessary formalities</li>
+    <li><i class="icon-li icon-ok"></i> without unnecessary formalities</li>
   </ul>
   </div>
 </div>
