new interns, news update, branch office st.gallen

--- a/src/documents/kontakt/index.html
+++ b/src/documents/kontakt/index.html
@@ -31,8 +31,6 @@ position: 7
                     Industriestrasse 44<br/>
                     8304 Wallisellen<br/><br/>
                 </address>
-            </div>
-            <div class="span6">
                 <dl class="dl-horizontal" style="margin-top: 0;">
                     <dt>Telefon</dt>
                     <dd><a href="tel:+41443701536">+41 44 370 15 36</a></dd>
@@ -41,6 +39,15 @@ position: 7
                     <dt>Web</dt>
                     <dd><a href="https://www.renuo.ch">www.renuo.ch</a></dd>
                 </dl>
+            </div>
+            <div class="span6">
+                <p>Unser Sitz in St. Gallen:</p>
+                <address>
+                    <b>Renuo GmbH</b><br/>
+                    Samuel Steiner<br/>
+                    Gallusstrasse 43<br/>
+                    9000 St. Gallen<br/><br/>
+                </address>
             </div>
         </div>
     </div>
