--- a/src/documents/kontakt/index.html
+++ b/src/documents/kontakt/index.html
@@ -24,18 +24,13 @@ position: 7
                 <p>Sie erreichen uns am Besten per Email unter <a href="mailto:info@renuo.ch">info@renuo.ch</a>.</p>
             </div>
         </div>
+        <br/>
         <div>
             <div class="span4">
                 <address>
                     <b>Renuo GmbH</b><br/>
                     Industriestrasse 44<br/>
                     8304 Wallisellen<br/><br/>
-                </address>
-
-                <p>Unser Sitz in St. Gallen:</p>
-                <address>
-                    Gallusstrasse 43<br/>
-                    9000 St. Gallen<br/><br/>
                 </address>
 
             </div>
@@ -55,5 +50,8 @@ position: 7
         <div id="map_canvas" style="width: 100%; height: 300px;">
             Google Maps konnte nicht geladen werden.
         </div>
+    </div>
+    <div class="span12">
+        <p>Unser Sitz in St. Gallen: Gallusstrasse 43, 9000 St. Gallen</p>
     </div>
 </div>
