--- a/src/documents/kontakt/index.html
+++ b/src/documents/kontakt/index.html
@@ -51,7 +51,9 @@ position: 7
             Google Maps konnte nicht geladen werden.
         </div>
     </div>
+    <div class="row-fluid">
     <div class="span12">
         <p>Unser Sitz in St. Gallen: Gallusstrasse 43, 9000 St. Gallen</p>
     </div>
+  </div>
 </div>
