--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -18,11 +18,9 @@ position: 5
     <div class="span8">
         <p>At the moment we look for the following positions:</p>
          <p>
-             <h3><a href="/jobs/150426-ruby-on-rails-entwickler-job/">Open Source Web Engineer 80-100%</a> <small>(from August 2015)</small></h3>
+             <h3><a href="/jobs/150817-ims-praktikum/">IMS-Praktikum</a> <small>(August 2016 - August 2017)</small></h3>
          </p>
-         <p>
-             <h3><a href="/jobs/150625-sea-seo/">Consultant SEA & SEO 20%</a> <small>(ab August 2015)</small></h3>
-         </p>
+         <p>Praktikum 2015 (IMS/HSR): Für 2015/2016 haben wir leider keine Praktikumsplätze mehr zu vergeben.</p> 
          <p>We also look forward to unsolicited applications to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>    </div>
 
     <div class="span4">
