update jobs page

--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -17,7 +17,7 @@ position:
 	<div class="row-fluid">
     <div class="span12">
 			<h3>Wir bieten zwei IMS-/HSR-Praktikumsstellen 2016/2017</h3>
-            <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ hochwertigen Applikationen fokussiert. Mit modernen WebTechnologien (Schwerpunkte Ruby on Rails, AngularJS, HTML5, Javascript) entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung unseres Teams suchen wir ab August 2016 für die Dauer eines Jahres zwei Praktikanten.</p>
+            <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ hochwertigen Applikationen fokussiert. Mit modernen Web-Technologien (Schwerpunkte Ruby on Rails, AngularJS, HTML5, Javascript) entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung unseres Teams suchen wir ab August 2016 für die Dauer eines Jahres zwei Praktikanten.</p>
 	<br/>
 			</div>
 	</div>
