--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -18,10 +18,11 @@ position: 5
     <div class="span8">
         <p>At the moment we look for the following positions:</p>
          <p>
-             <h3><a href="/jobs/150817-ims-praktikum/">IMS-Praktikum</a> <small>(August 2016 - August 2017)</small></h3>
+             <h3><a href="/jobs/150817-ims-praktikum/">IMS-/ HSR-Praktikum</a> <small>(August 2016 - August 2017)</small></h3>
          </p>
-         <p>Praktikum 2015 (IMS/HSR): Für 2015/2016 haben wir leider keine Praktikumsplätze mehr zu vergeben.</p> 
-         <p>We also look forward to unsolicited applications to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p>    </div>
+         <p>We also look forward to unsolicited applications to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p> <br/>
+         <p>Praktikum 2015 (IMS/HSR): Für 2015/2016 haben wir leider keine Praktikumsplätze mehr zu vergeben.</p>
+   </div>
 
     <div class="span4">
         <p>
