--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -8,7 +8,7 @@ position:
 <div class="row-fluid page-section">
     <div class="span12">
         <div class="page-header">
-            <h1>IMS-/HSR-Praktikant
+            <h1>IMS-Praktikant
                 <small>ab 2. August 2016</small>
             </h1>
         </div>
@@ -16,7 +16,7 @@ position:
 
 	<div class="row-fluid">
     <div class="span12">
-			<h3>Wir bieten zwei IMS-/HSR-Praktikumsstellen 2016/2017</h3>
+			<h3>Wir bieten zwei IMS-Praktikumsstellen 2016/2017</h3>
             <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ hochwertigen Applikationen fokussiert. Mit modernen Web-Technologien (Schwerpunkte Ruby on Rails, AngularJS, HTML5, Javascript) entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung unseres Teams suchen wir ab August 2016 für die Dauer eines Jahres zwei Praktikanten.</p>
 	<br/>
 			</div>
@@ -35,7 +35,7 @@ position:
 		<div class="span4">
 			<h4>Was erwarten wir?</h4>
 			<ul class="icons-ul">
-          <li><i class="icon-li icon-ok"></i> Du <3 Open Source</li>
+          <li><i class="icon-li icon-ok"></i> Du &lt;3 Open Source</li>
           <li><i class="icon-li icon-ok"></i> (Sehr) Gute Noten</li>
           <li><i class="icon-li icon-ok"></i> Du programmierst manchmal auch in Deiner Freizeit</li>
           <li><i class="icon-li icon-ok"></i> Du lernst gerne neue Dinge</li>
