--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -1,5 +1,5 @@
 ﻿--- yaml
-layout: 'page'
+layout: 'jobs'
 title: 'IMS-Praktikum 2016/2017'
 description: 'Wir bieten zwei IMS-Praktikumsstellen 2016/2017 bei der Renuo'
 position:
