--- a/src/documents/jobs/150907-hsr-praktikum/index.html
+++ b/src/documents/jobs/150907-hsr-praktikum/index.html
@@ -1,5 +1,5 @@
 ﻿--- yaml
-layout: 'page'
+layout: 'jobs'
 title: 'HSR-Praktikum zur FH Studium Zulassung'
 description: 'Wir bieten eine HSR-Praktikumsstelle 2016/2017 zur FH Studium Zulassung bei der Renuo'
 position:
