--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -5,7 +5,7 @@ description: 'Wir bieten zwei IMS-Praktikumsstellen 2016/2017 bei der Renuo'
 position:
 ---
 
-<div class="row-fluid page-section">
+<div class="row-fluid ">
   <div class="span12">
     <div class="page-header">
       <h1>IMS-Praktikant
