--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -9,7 +9,8 @@ position: 5
 <div class="row-fluid">
   <div class="span12">
     <div class="page-header">
-      <h1>Open job positions</h1>
+      <h1>Open job positions
+        <small>join us!</small></h1>
     </div>
   </div>
 </div>
