--- a/src/documents/jobs/150907-hsr-praktikum/index.html
+++ b/src/documents/jobs/150907-hsr-praktikum/index.html
@@ -5,7 +5,7 @@ description: 'Wir bieten eine HSR-Praktikumsstelle 2016/2017 zur FH Studium Zula
 position:
 ---
 
-<div class="row-fluid page-section">
+<div class="row-fluid">
   <div class="span12">
     <div class="page-header">
       <h1>HSR-Praktikant
