--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -10,7 +10,7 @@ position: 5
   <div class="span12">
     <div class="page-header">
       <h1>Open job positions
-        <small>join us!</small></h1>
+        <small>Join the force!</small></h1>
     </div>
   </div>
 </div>
