--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -18,7 +18,7 @@ position:
 <div class="row-fluid">
   <div class="span12">
     <h3>Wir bieten zwei IMS-Praktikumsstellen 2016/2017</h3>
-    <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ 
+    <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ
     hochwertigen Applikationen fokussiert. Mit modernen Web-Technologien (Schwerpunkte Ruby on Rails, AngularJS, HTML5, Javascript)
     entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung
     unseres Teams suchen wir ab August 2016 für die Dauer eines Jahres zwei Praktikanten.</p>
@@ -57,7 +57,7 @@ position:
       <li><i class="icon-li icon-ok"></i> Flexible Arbeitszeiten</li>
       <li><i class="icon-li icon-ok"></i> Ein technisch sehr kompetentes, motiviertes, kollegiales und junges Team</li>
       <li><i class="icon-li icon-ok"></i> Flexible Arbeitszeiten</li>
-      <li><i class="icon-li icon-ok"></i> "Praktikum zu zweit": Wir bilden jeweils zwei Praktikanten gleichzeitig aus</li>
+      <li><i class="icon-li icon-ok"></i> "Praktikum nicht alleine": Wir bilden jeweils mehrere Praktikanten gleichzeitig aus</li>
       <li><i class="icon-li icon-ok"></i> Betreuung deiner IPA</li>
       <li><i class="icon-li icon-ok"></i> Wir sind IMS-Abgänger und wissen genau, was auf dich zukommt!</li>
     </ul>
@@ -73,4 +73,3 @@ position:
     Interview und einem technischen Assessment einladen.</p>
   </div>
 </div>
-
