--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -161,37 +161,43 @@ position: 5
 <div class="row-fluid">
   <div class="span12">
     <div class="page-header">
-      <h1>More Goodies</h1>
-      <ul class="icons-ul">
-        <li><i class="icon-li icon-ok"></i> Material</li>
-        <ul>
-          <li>at least one 40 inch 4k monitor</li>
-          <li>the latest and <b>best</b> MacBookPro</li>
-          <li>standing desks</li>
-        </ul>
-        <li><i class="icon-li icon-ok"></i> Social &amp; learning</li>
-        <li>a week where we fly away (in 2015 to Sicily) and learn new stuff you are interested in</li>
-        <li>at least ½ day per week to learn anything you want</li>
-        <li>many social events (at least one per month) with unlimited beverages</li>
-        <li>meetups where you can participate and learn new things, and someone who goes there with you</li>
-        <li><i class="icon-li icon-ok"></i> Food &amp; drinks</li>
-        <ul>
-          <li>free energy drinks</li>
-          <li>free coffee with any flavors</li>
-          <li>free pizza when we work late</li>
-          <li>an ice machine</li>
-          <li>a Renuo wallet, e.g. budget for "znüni"</li>
-          <li>events where people bring stuff for everyone, like cakes, salami, special beer, ...</li>
-        </ul>
-        <li><i class="icon-li icon-ok"></i> ...and if you want something else, just ask!</li>
+      <h1>Even more goodies</h1>
+    </div>
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="span4">
+    <h3>More Goodies</h3>
+    <ul class="icons-ul">
+      <li><i class="icon-li icon-ok"></i> Material</li>
+      <ul>
+        <li>at least one 40 inch 4k monitor</li>
+        <li>the latest and <b>best</b> MacBookPro</li>
+        <li>standing desks</li>
       </ul>
-    </div>
-    <div class="span4">
-      <img style="max-height: 250px;" src="/images/jobs/ice-energy-drinks-coffee.jpg" alt="Ice maker, energy drinks and coffee"/>
-    </div>
-    <div class="span4">
-      <img style="max-height: 250px;" src="/images/jobs/renuo-social.jpg" alt="Social events at Renuo"/>
-    </div>
+      <li><i class="icon-li icon-ok"></i> Social &amp; learning</li>
+      <li>a week where we fly away (in 2015 to Sicily) and learn new stuff you are interested in</li>
+      <li>at least ½ day per week to learn anything you want</li>
+      <li>many social events (at least one per month) with unlimited beverages</li>
+      <li>meetups where you can participate and learn new things, and someone who goes there with you</li>
+      <li><i class="icon-li icon-ok"></i> Food &amp; drinks</li>
+      <ul>
+        <li>free energy drinks</li>
+        <li>free coffee with any flavors</li>
+        <li>free pizza when we work late</li>
+        <li>an ice machine</li>
+        <li>a Renuo wallet, e.g. budget for "znüni"</li>
+        <li>events where people bring stuff for everyone, like cakes, salami, special beer, ...</li>
+      </ul>
+      <li><i class="icon-li icon-ok"></i> ...and if you want something else, just ask!</li>
+    </ul>
+  </div>
+  <div class="span4">
+    <img style="max-height: 250px;" src="/images/jobs/ice-energy-drinks-coffee.jpg" alt="Ice maker, energy drinks and coffee"/>
+  </div>
+  <div class="span4">
+    <img style="max-height: 250px;" src="/images/jobs/renuo-social.jpg" alt="Social events at Renuo"/>
   </div>
 </div>
 
