--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -177,17 +177,20 @@ position: 5
         <li>standing desks</li>
       </ul>
       <li><i class="icon-li icon-ok"></i> Social &amp; learning</li>
-      <li>a week where we fly away (in 2015 to Sicily) and learn new stuff you are interested in</li>
-      <li>at least ½ day per week to learn anything you want</li>
-      <li>many social events (at least one per month) with unlimited beverages</li>
-      <li>meetups where you can participate and learn new things, and someone who goes there with you</li>
-      <li><i class="icon-li icon-ok"></i> Food &amp; drinks</li>
+      <ul>
+        <li>a week where we fly away (in 2015 to Sicily) and learn new stuff you are interested in</li>
+        <li>at least ½ day per week to learn anything you want</li>
+        <li>many social events (at least one per month) with unlimited beverages</li>
+        <li>meetups where you can participate and learn new things, and someone who goes there with you</li>
+        <li><i class="icon-li icon-ok"></i> Food &amp; drinks</li>
+      </ul>
       <ul>
         <li>free energy drinks</li>
         <li>free coffee with any flavors</li>
         <li>free pizza when we work late</li>
+        <li>free fruits</li>
         <li>an ice machine</li>
-        <li>a Renuo wallet, e.g. budget for "znüni"</li>
+        <li>a Renuo wallet, where every employee can buy stuff for the office, e.g. "znüni", fruits, ...</li>
         <li>events where people bring stuff for everyone, like cakes, salami, special beer, ...</li>
       </ul>
       <li><i class="icon-li icon-ok"></i> ...and if you want something else, just ask!</li>
