--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -167,7 +167,7 @@ position: 5
 </div>
 
 <div class="row-fluid">
-  <div class="span4">
+  <div class="span8">
     <h3>More Goodies</h3>
     <ul class="icons-ul">
       <li><i class="icon-li icon-ok"></i> Material</li>
@@ -198,9 +198,7 @@ position: 5
   </div>
   <div class="span4">
     <img style="max-height: 250px;" src="/images/jobs/renuo-ice-energy-drinks-coffee.jpg" alt="Ice maker, energy drinks and coffee"/>
-  </div>
-  <div class="span4">
-    <img style="max-height: 250px;" src="/images/jobs/renuo-social.jpg" alt="Social events at Renuo"/>
+    <img style="max-height: 250px; margin-top: 20px;" src="/images/jobs/renuo-social.jpg" alt="Social events at Renuo"/>
   </div>
 </div>
 
