--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -101,8 +101,8 @@ position: 5
       <li><i class="icon-li icon-ok"></i> the stuff and tools <b>you</b> want</li>
       <ul>
         <li>standing desks</li>
-        <li>big screens</li>
-        <li>MacBooks</li>
+        <li>big screens (at least one 40 inch 4k monitor)</li>
+        <li>latest and <b>best</b> MacBook Pro</li>
         <li>whiteboards, flipchart</li>
       </ul>
       <li><i class="icon-li icon-ok"></i> in a cool office</li>
@@ -170,12 +170,6 @@ position: 5
   <div class="span8">
     <h3>More Goodies</h3>
     <ul class="icons-ul">
-      <li><i class="icon-li icon-ok"></i> Material</li>
-      <ul>
-        <li>at least one 40 inch 4k monitor</li>
-        <li>the latest and <b>best</b> MacBookPro</li>
-        <li>standing desks</li>
-      </ul>
       <li><i class="icon-li icon-ok"></i> Social &amp; learning</li>
       <ul>
         <li>a week where we fly away (in 2015 to Sicily) and learn new stuff you are interested in</li>
