replace namings to prevent possible legal problems

--- a/src/documents/kontakt/index.html
+++ b/src/documents/kontakt/index.html
@@ -54,7 +54,7 @@ position: 7
     
     <div class="row-fluid">
     <div class="span12">
-        <p>Unser Sitz in St. Gallen: Gallusstrasse 43, 9000 St. Gallen</p>
+        <p>Unsere Geschäftsadresse in St. Gallen: Gallusstrasse 43, 9000 St. Gallen</p>
     </div>
   </div>
 </div>
