--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -66,10 +66,41 @@ position:
 
 <div class="row-fluid">
   <div class="span12">
-    <h3>Next step</h3>
+    <h3>Next Steps</h3>
     <p>Sende deine Bewerbungsunterlagen (CV, Motivationssschreiben, vorzugsweise Code eines eigenen Projekts) an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>.</p>
     <p><b>Bewerbungsfrist: 31. Oktober 2015</b></p>
-    <p>Bis zum 31. Oktober 2015 werden wir die Bewerbungen sammeln und danach (bis  zum 15. November 2015) gezielt Kandidaten zu einem
-    Interview und einem technischen Assessment einladen.</p>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Zeitraum</th>
+          <th>Aktivität</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1. September - 31. Oktober 2015</td>
+          <td>Wir warten auf deine Bewerbung!</td>
+        </tr>
+        <tr>
+          <td>2. November 2015</td>
+          <td>Du erhältst ein Mail, ob du zum Bewerbungsgespräch eingeladen wirst</td>
+        </tr>
+        <tr>
+          <td>11. November - 13. November 2015</td>
+          <td>Du nimmst am Bewerbungsgespräch teil bei uns in Wallisellen</td>
+        </tr>
+        <tr>
+          <td>17. November - 20. November 2015</td>
+          <td>Du löst 10 technische Aufgaben (Assessment) an einem Nachmittag (ca. 4h) bei uns in Wallisellen</td>
+        </tr>
+        <tr>
+          <td>27. November 2015</td>
+          <td>Du unterschreibst hoffentlich deinen Praktikumsvertrag für das Jahr August 2016 - August 2017</td>
+        </tr>
+      </tbody>
+    </table>
+    <p>Bei extrem guten Bewerbungen sind wir bereit, uns schon schneller für einen Praktikanten/eine Praktikantin zu entscheiden.</p>
+    <p>Wir freuen uns auf deine Bewerbung!</p>
   </div>
 </div>
+
