--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -99,7 +99,8 @@ position:
         </tr>
       </tbody>
     </table>
-    <p>Bei extrem guten Bewerbungen sind wir bereit, uns schon schneller für einen Praktikanten/eine Praktikantin zu entscheiden.</p>
+    <p>Falls du ausserordentlich gute Noten hast oder deine Bewerbung uns extrem besticht (z.B. wenn du bereits mit Ruby on Rails Projekte
+    durchgeführt hast) sind wir bereit, den Bewerbungsprozess für dich zu beschleunigen. Bewirb dich also so schnell wie möglich!</p>
     <p>Wir freuen uns auf deine Bewerbung!</p>
   </div>
 </div>
