--- a/src/documents/jobs/150817-ims-praktikum/index.html
+++ b/src/documents/jobs/150817-ims-praktikum/index.html
@@ -83,7 +83,7 @@ position:
         </tr>
         <tr>
           <td>2. November 2015</td>
-          <td>Du erhältst ein Mail, ob du zum Bewerbungsgespräch eingeladen wirst</td>
+          <td>Du erhältst eine Mail, ob du zum Bewerbungsgespräch eingeladen wirst</td>
         </tr>
         <tr>
           <td>11. November - 13. November 2015</td>
