--- a/src/documents/jobs/index.html
+++ b/src/documents/jobs/index.html
@@ -18,6 +18,7 @@ position: 5
 <div class="row-fluid">
   <div class="span8">
     <p>At the moment we look for the following positions:</p>
+    <h3><a href="/jobs/151118-opensource-webentwickler/">Open Source Web Engineer (2x)</a> <small>(as of now)</small></h3>
     <h3><a href="/jobs/150817-ims-praktikum/">IMS-Praktikum</a> <small>(August 2016 - August 2017)</small></h3>
     <h3><a href="/jobs/150907-hsr-praktikum/">HSR-Praktikum zur Zulassung zum FH Studium</a> <small>(August 2016 - August 2017)</small></h3>
     <p>We also look forward to unsolicited applications to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>!</p> <br/>
