--- a/src/documents/jobs/151118-opensource-webentwickler/index.html
+++ b/src/documents/jobs/151118-opensource-webentwickler/index.html
@@ -1,6 +1,6 @@
 ﻿--- yaml
 layout: 'page'
-title: 'Open Source Web Engineer'
+title: 'Offene Stelle Webentwickler'
 description: 'Vacancies at Renuo'
 position:
 ---
