--- a/src/documents/jobs/151118-opensource-webentwickler/index.html
+++ b/src/documents/jobs/151118-opensource-webentwickler/index.html
@@ -55,7 +55,7 @@ position:
 <div class="row-fluid">
 	<div class="span12">
 	<h3>Next step</h3>
-	<p>Write uns an email to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a> and send us your CV and/or portfolio.</p>
+	<p>Write us an email to <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a> and send us your CV and/or portfolio.</p>
 	<p>We are very eager to see your github account!</p>
 	</div>
 </div>
