--- a/src/documents/jobs/151118-opensource-webentwickler/index.html
+++ b/src/documents/jobs/151118-opensource-webentwickler/index.html
@@ -1,5 +1,5 @@
 ﻿--- yaml
-layout: 'page'
+layout: 'jobs'
 title: 'Open Source Software Engineer / Offene Stelle Webentwickler'
 description: 'Vacancies at Renuo'
 position:
