--- a/src/documents/jobs/150817-ims-praktikum.html
+++ b/src/documents/jobs/150817-ims-praktikum.html
@@ -1,23 +1,16 @@
 ﻿--- yaml
 layout: 'jobs'
-title: 'HSR-Praktikum zur FH Studium Zulassung'
-description: 'Wir bieten eine HSR-Praktikumsstelle 2016/2017 zur FH Studium Zulassung bei der Renuo'
-position:
+title: 'IMS-Praktikum 2016/2017'
+description: 'Wir bieten zwei IMS-Praktikumsstellen 2016/2017 bei der Renuo'
+position: 10
+tags: ['jobs', 'online']
+period: August 2016 - July 2017
+workload: 100%
 ---
 
 <div class="row-fluid">
   <div class="span12">
-    <div class="page-header">
-      <h1>HSR-Praktikant
-        <small>ab 2. August 2016</small>
-      </h1>
-    </div>
-  </div>
-</div>
-
-<div class="row-fluid">
-  <div class="span12">
-    <h3>Wir bieten eine HSR-Praktikumsstelle 2016/2017 zur FH Studium Zulassung ab 2017</h3>
+    <h3>Wir bieten zwei IMS-Praktikumsstellen 2016/2017</h3>
     <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ
     hochwertigen Applikationen fokussiert. Mit modernen Web-Technologien (Schwerpunkte Ruby on Rails, AngularJS, HTML5, Javascript)
     entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung
@@ -58,17 +51,50 @@ position:
       <li><i class="icon-li icon-ok"></i> Ein technisch sehr kompetentes, motiviertes, kollegiales und junges Team</li>
       <li><i class="icon-li icon-ok"></i> Flexible Arbeitszeiten</li>
       <li><i class="icon-li icon-ok"></i> "Praktikum nicht alleine": Wir bilden jeweils mehrere Praktikanten gleichzeitig aus</li>
-      <li><i class="icon-li icon-ok"></i> Wir sind HSR-Abgänger und wissen genau, was auf dich zukommt!</li>
+      <li><i class="icon-li icon-ok"></i> Betreuung deiner IPA</li>
+      <li><i class="icon-li icon-ok"></i> Wir sind IMS-Abgänger und wissen genau, was auf dich zukommt!</li>
     </ul>
   </div>
 </div>
 
 <div class="row-fluid">
   <div class="span12">
-    <h3>Next step</h3>
+    <h3>Next Steps</h3>
     <p>Sende deine Bewerbungsunterlagen (CV, Motivationssschreiben, vorzugsweise Code eines eigenen Projekts) an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>.</p>
     <p><b>Bewerbungsfrist: 31. Oktober 2015</b></p>
-    <p>Bis zum 31. Oktober 2015 werden wir die Bewerbungen sammeln und danach (bis  zum 15. November 2015) gezielt Kandidaten zu einem
-    Interview und einem technischen Assessment einladen.</p>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Zeitraum</th>
+          <th>Aktivität</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1. September - 31. Oktober 2015</td>
+          <td>Wir warten auf deine Bewerbung!</td>
+        </tr>
+        <tr>
+          <td>2. November 2015</td>
+          <td>Du erhältst eine Mail, ob du zum Bewerbungsgespräch eingeladen wirst</td>
+        </tr>
+        <tr>
+          <td>11. November - 13. November 2015</td>
+          <td>Du nimmst am Bewerbungsgespräch teil bei uns in Wallisellen</td>
+        </tr>
+        <tr>
+          <td>17. November - 20. November 2015</td>
+          <td>Du löst 10 technische Aufgaben (Assessment) an einem Nachmittag (ca. 4h) bei uns in Wallisellen</td>
+        </tr>
+        <tr>
+          <td>27. November 2015</td>
+          <td>Du unterschreibst hoffentlich deinen Praktikumsvertrag für das Jahr August 2016 - August 2017</td>
+        </tr>
+      </tbody>
+    </table>
+    <p>Falls du ausserordentlich gute Noten hast oder deine Bewerbung uns extrem besticht (z.B. wenn du bereits mit Ruby on Rails Projekte
+    durchgeführt hast) sind wir bereit, den Bewerbungsprozess für dich zu beschleunigen. Bewirb dich also so schnell wie möglich!</p>
+    <p>Wir freuen uns auf deine Bewerbung!</p>
   </div>
 </div>
+
