remove ims-internship add hms-internship

--- a/src/documents/jobs/150817-ims-praktikum.html
+++ b/src/documents/jobs/150817-ims-praktikum.html
@@ -2,7 +2,7 @@
 layout: 'jobs'
 title: 'IMS-Praktikum 2016/2017'
 description: 'Wir bieten zwei IMS-Praktikumsstellen 2016/2017 bei der Renuo'
-position: 10
+position:
 tags: ['jobs', 'online']
 period: August 2016 - July 2017
 workload: 100%
