--- a/src/documents/jobs/150817-ims-praktikum.html
+++ b/src/documents/jobs/150817-ims-praktikum.html
@@ -1,8 +1,11 @@
-﻿--- yaml
+--- yaml
 layout: 'jobs'
-title: 'IMS-Praktikumsstelle 2016/2017'
-description: 'Vacancies at Renuo'
-position:
+title: 'IMS-Praktikum 2016/2017'
+description: 'Wir bieten zwei IMS-Praktikumsstellen 2016/2017 bei der Renuo'
+position: 10
+tags: ['jobs']
+period: August 2016 - July 2017
+workload: 100%
 ---
 
 <div class="row-fluid">
