--- a/src/documents/jobs/150817-ims-praktikum.html
+++ b/src/documents/jobs/150817-ims-praktikum.html
@@ -1,4 +1,4 @@
----- yaml
+--- yaml
 layout: 'jobs'
 title: 'IMS-Praktikum 2016/2017'
 description: 'Wir bieten zwei IMS-Praktikumsstellen 2016/2017 bei der Renuo'
