--- a/src/documents/jobs/150817-ims-praktikum.html
+++ b/src/documents/jobs/150817-ims-praktikum.html
@@ -8,6 +8,16 @@ period: August 2016 - July 2017
 workload: 100%
 ---
 
+
+<div class="row-fluid">
+  <div class="span12">
+    <div class="alert alert-block alert-error">
+      <h4>Stellen bereits besetzt</h4>
+      Diese Stellen sind bereits besetzt. Besten Dank für das Interesse.
+    </div>
+  </div>
+</div>
+
 <div class="row-fluid">
   <div class="span12">
     <h3>Wir bieten zwei IMS-Praktikumsstellen 2016/2017</h3>
