--- a/src/documents/jobs/150907-hsr-praktikum.html
+++ b/src/documents/jobs/150907-hsr-praktikum.html
@@ -3,7 +3,7 @@ layout: 'jobs'
 title: 'HSR-Praktikum zur FH Studium Zulassung'
 description: 'Wir bieten eine HSR-Praktikumsstelle 2016/2017 zur FH Studium Zulassung bei der Renuo'
 position: 15
-tags: ['jobs', 'online']
+tags: ['jobs', 'jobs-online']
 period: August 2016 - July 2017
 workload: 100%
 ---
