--- a/src/documents/jobs/151218-hms-praktikum.html
+++ b/src/documents/jobs/151218-hms-praktikum.html
@@ -3,7 +3,7 @@ layout: 'jobs'
 title: 'HMS-Praktikum 2016/2017'
 description: 'Wir bieten eine HMS-Praktikumsstelle 2016/2017 bei der Renuo'
 position: 12
-tags: ['jobs', 'online', 'HMS']
+tags: ['jobs', 'jobs-online', 'HMS']
 period: July 2016 - July 2017
 workload: 100%
 ---
